--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">RVCE Connect</string>
+    <integer name="card_flip_time_full">2000</integer>
+    <integer name="card_flip_time_half">1000</integer>
 </resources>
