Teacher Front End UI with Attendance Updates and Counsel updates

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,8 +4,8 @@
     <integer name="card_flip_time_half">500</integer>
 
     <string-array name="attendance">
-    <item>ATTENDANCE</item>
-    <item>UPDATES</item>
+        <item>ATTENDANCE</item>
+        <item>UPDATES</item>
     </string-array>
 
 
@@ -25,6 +25,10 @@
         <item>PLEASE ENTER CREDENTIALS TO LOGIN INTO THE APP</item>
         <item>MAKE SURE YOU ARE CONNECTED TO COLLEGE WIFI</item>
     </string-array>
+    <string name="title_activity_teacher_front_end">TeacherFrontEnd</string>
+    <string name="title_home">Home</string>
+    <string name="title_dashboard">Dashboard</string>
+    <string name="title_notifications">Notifications</string>
 
 
 </resources>
